force-app/main/default/objects/Right__c/Right__c.object-meta.xml
<CustomObject>
    <label>Right</label>
    <nameField>
        <displayFormat>RIGHT-{00000}</displayFormat>
        <label>Right Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>