force-app/main/default/objects/Right__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>