force-app/main/default/objects/Right__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grade__c</columns>
    <columns>Territory__c</columns>
    <columns>Distribution__c</columns>
    <columns>Exclusivity__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>